edited custom circle code

--- a/customcircle.html
+++ b/customcircle.html
@@ -8,7 +8,7 @@
 
 <script>
 var radius = prompt("Enter the radius of the circle.");
-var color = prompt("Enter the color of the circle. Chooose red, green, or blue.");
+var color = prompt("Enter the color of the circle. Choose red, green, or blue.");
 
 function draw() {
 	if (color === "red") {
